Update maven-surefire-plugin to work with jdk21